    * 0351 FIX: local: Catch invalid state codes and map to 3 (UNKNOWN)...
    * 0397 FIX: mrpe: tolerate performance variable names with spaces...

    Multisite:
    * 0371 Added log class filter to hostsvcevents view
    * 0352 Avoid Livestatus connections on pages that do not need them...
    * 0390 Added an icon selector to the view editor...
    * 0302 FIX: Fixed highlight of choosen elements in foldertee/views snapin in Chrome/IE
    * 0239 FIX: Fixed incorrect html formatting when displaying host or service comments...
    * 0307 FIX: Increased performance of multisite GUI with a large userbase...
    * 0312 FIX: Hiding views related to not existing datasources, like the EC now...
    * 0325 FIX: Removed CSV export icon from availability views...
    * 0327 FIX: Most forms did now work with "Profile Requests" enabled...
    * 0333 FIX: Fixed too long page title during performing several actions...
    * 0356 FIX: Fixed exception caused by utf8 chars in tooltip text...
    * 0368 FIX: Generating selection id is hopefully now compatible to more systems...
    * 0374 FIX: Fixed syntax error in exception handler of LDAP search code...
    * 0375 FIX: LDAP: Now handling user-ids with umlauts...

    WATO:
    * 0308 Multisite can now set rotation view permissions for NagVis...
    * 0244 New features for WATO page Backup & Restore...
    * 0382 Active HTTP check now supports multiline regexp matching...
    * 0353 New button in service list for refreshing all services...
    * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
    * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
    * 0019 FIX: Fixed wording in WATO rule for MSSQL check
    * 0242 FIX: Parameters for clustered services can now be configured on the cluster host...
    * 0309 FIX: Trying to prevent read/write conflicts with a large user base...
    * 0311 FIX: Fixed "Inventory failed" message when trying an inventory on clusters via WATO...