@@ -3,6 +3,6 @@ Component: checks
 State: open
 Date: 2013-05-27 16:16:05
 Targetversion: 1.2.3
-Class: nastiness
+Class: cleanup
 
 The variable is named wrong. Change this and all texts in the WATO definitions.
