@@ -1,0 +1,11 @@
+Title: Added sorter / filter for host/service service levels
+Level: 1
+Component: multisite
+Version: 1.2.4b1
+Date: 1387374041
+Class: feature
+
+The service level attribute of hosts and services can now be
+shown in multisite views. It has been added to the detail
+page of hosts and services.
+
