@@ -1042,6 +1042,7 @@ multisite_builtin_views.update({
                              ('host_group_memberlist', None),
                              ('host_parents', None),
                              ('host_childs', None),
+                             ('host_servicelevel', None),
                              ('host_contact_groups', None),
                              ('host_contacts', None),
                              ('host_plugin_output', None),
@@ -1264,6 +1265,7 @@ multisite_builtin_views.update({
                           ('service_icons', None),
                           ('service_state', None),
                           ('svc_group_memberlist', None),
+                          ('svc_servicelevel', None),
                           ('svc_contact_groups', None),
                           ('svc_contacts', None),
                           ('svc_plugin_output', None),
