@@ -69,6 +69,7 @@
     * 0371 Added log class filter to hostsvcevents view
     * 0352 Avoid Livestatus connections on pages that do not need them...
     * 0390 Added an icon selector to the view editor...
+    * 0391 Added sorter / filter for host/service service levels...
     * 0302 FIX: Fixed highlight of choosen elements in foldertee/views snapin in Chrome/IE
     * 0239 FIX: Fixed incorrect html formatting when displaying host or service comments...
     * 0307 FIX: Increased performance of multisite GUI with a large userbase...
